# fabric-tendroids

./: .gitignore  IMPLEMENTATION_STATUS.adoc  PROJECT_OVERVIEW.adoc  README.md  antora-playbook.yml  package.json
.github/workflows/: docs.yml
docs/: antora.yml  phase2-implementation-guide.adoc  phase2-jira-summary.adoc  phase2-planning.adoc  phase2-roadmap.adoc  phase2-summary.adoc  sprint-organization-guide.adoc
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: api.adoc  architecture.adoc  components.adoc  configuration.adoc  index.adoc  installation.adoc  quickstart.adoc
docs/supplemental_ui/css/: dark-mode.css
docs/supplemental_ui/js/: dark-mode.js
docs/supplemental_ui/partials/: head-scripts.hbs  header-content.hbs
exts/: get_monitor_info.py
exts/docs/: antora.yml
exts/docs/modules/ROOT/: nav.adoc
exts/docs/supplemental_ui/css/: dark-mode.css
exts/docs/supplemental_ui/js/: dark-mode.js
exts/docs/supplemental_ui/partials/: footer-scripts.hbs  head-scripts.hbs
exts/qixotic.tendroids/: BUG_FIXES.adoc  CLEANUP_SUMMARY_20251120.adoc  COMPLETE_FIXES_V3.adoc  CREATURE_CONTROLS.adoc  NEW_INTERACTION_METHOD.txt  PHASE2D_QUICK_START.adoc  REFACTOR_SUMMARY.adoc  RELOAD_AND_TEST.adoc  SESSION_COMPLETE.adoc  SESSION_COMPLETE_20251121.adoc  SESSION_HANDOFF_20251120.adoc  cleanup_duplicate_pyd.bat  diagnose_performance.py  pytest.ini  requirements-test.txt  run_tests.py  test_contact_offset_tuning.py  test_creature_phase1.py  test_wave_animation.py
exts/qixotic.tendroids/_archive/: BUILD_INSTRUCTIONS.md  PHASE2_PURE_COMPUTATION.md  run_particle_test.bat  test_phase2d_bubbles.py
exts/qixotic.tendroids/archive/: run_stress_test.bat  stress_test_controller.py
exts/qixotic.tendroids/archive/animation/: wave_controller.py
exts/qixotic.tendroids/archive/bubbles/: bubble_config.py  bubble_helpers.py  bubble_manager.py
exts/qixotic.tendroids/archive/tests/: README.adoc  clear_scene.py  one_liners.py  script_editor_ui_wave_test.py  stop_animation.py  test_final.py  test_minimal.py  test_ui_integration.py  test_ui_wave_integration.py  test_wave_motion.py
exts/qixotic.tendroids/archive/ui/: bubble_controls.py  control_panel.py  wave_controls.py
exts/qixotic.tendroids/config/: extension.toml
exts/qixotic.tendroids/docs/: ASCIIDOC-SYNTAX-REMINDER.adoc  BUBBLE_DEFORMATION_SYNC_IMPLEMENTATION.adoc  BUBBLE_GEOMETRY_FIX.adoc  BUBBLE_LEADING_EDGE_FIX.adoc  BUBBLE_SPAWN_FIX.adoc  BUBBLE_TILT_FIX.adoc  BUBBLE_TUNING_GUIDE.adoc  CHANGELOG.adoc  CLEANUP_2025-11-16_COMPLETE.adoc  CLEANUP_2025-11-16_PHASE2D_PREP.adoc  COMMIT-phase1-step1.adoc  CONFIG_GUIDE.adoc  CONTINUITY-2025-11-25-optimization-ready.adoc  CONTINUITY-bubble-tracking-issue.adoc  CRITICAL_FIXES_APPLIED.adoc  DOCUMENTATION_UPDATE_SUMMARY.adoc  FIXED_BEHAVIOR.adoc  GPU-BUBBLE-PHYSICS.adoc  GPU-BUBBLES-LESSONS-LEARNED.adoc  GPU-BUBBLES-STATUS.adoc  GPU-INTEGRATION-COMPLETE.adoc  IMPLEMENTATION_STATUS.adoc  INTERACTION_ZONES.adoc  LTEND-28-input-lock.adoc  NEXT-SESSION-INTERACTIVE-CREATURE.adoc  OPTIMIZATION-QUICK-START.adoc  OPTIMIZATION_ANALYSIS.adoc  PERFORMANCE_LOG.adoc  PHASE1-GPU-BUBBLES-COMPLETE.adoc  PHASE2D_QUICK_START.adoc  PROJECT_OVERVIEW.adoc  PROJECT_STATUS.adoc  QUICK-REF-GPU-BUBBLES.adoc  README.adoc  SESSION-SUMMARY-2025-11-23.adoc  SESSION-SUMMARY-2025-11-25.adoc  SESSION_SUMMARY_BUBBLE_FIXES.adoc  SESSION_SUMMARY_STRESS_TESTING_AND_BUBBLE_FIX.adoc  TAB-INTEGRATION-2025-11-25.adoc  UI-CLEANUP-2025-11-25.adoc  (+58 more)
exts/qixotic.tendroids/docs/archive/: BUBBLE_CLIPPING_FIX.adoc  HIDE_UNTIL_CLEAR_IMPLEMENTATION.adoc  POC_BUBBLE_GUIDED_DEFORMATION.adoc  REFACTORING_TASKS.adoc  current-project-state.adoc  performance-analysis-phase2.adoc  performance-results.adoc  phase2-development-plan.adoc  stress-test-guide.adoc
exts/qixotic.tendroids/docs/continuity/: 2025-11-25-fabric-next-session.adoc  2025-11-25-phase2-complete.adoc  2025-11-26-fabric-hotfix.adoc  2025-11-26-project-wrap-up.adoc  2025-11-26-session-complete.adoc  NEXT-SESSION-QUICKSTART.adoc  phase1-step1-creature-implementation.adoc  phase1-step2-bubble-collision-and-improvements.adoc
exts/qixotic.tendroids/docs/plantUml/: tendroid-class-diagram.puml  tendroid-sequence-diagram.puml  tendroid-state-diagram.puml  tendroids-activity-diagram.puml  tendroids-component-diagram.puml  tendroids-package-diagram.puml
exts/qixotic.tendroids/docs/research/: fabric-warp-integration.adoc
exts/qixotic.tendroids/interaction-docs/: creature-tendroid-interactions.adoc  development-plan.adoc  gpu-architecture-guide.adoc
exts/qixotic.tendroids/qixotic/: __init__.py
exts/qixotic.tendroids/qixotic/tendroids/: BUBBLE_CONTROLS_UI.adoc  BUBBLE_FIXES_APPLIED.adoc  BUBBLE_FIX_PLAN.adoc  BUBBLE_POP_IMPLEMENTATION.adoc  BUGFIX_DESPAWN_HEIGHT.adoc  CLEANUP_COMPLETE_2025-11-16.adoc  (+38 more)
exts/qixotic.tendroids/qixotic/tendroids/cpp/: .gitignore  BUILD_TEST_GUIDE.adoc  CMakeLists.txt  CMakePresets.json  PHASE1_SUMMARY.adoc  QUICKSTART.txt  README.adoc  build-omniverse.bat  build.bat  build_quick.bat  build_simple.bat  build_usd.bat
exts/qixotic.tendroids/qixotic/tendroids/cpp/documentation/: CLION_CMAKE_FIX.adoc  CLION_SETUP.adoc  PHASE1_SUMMARY.adoc  PHASE2_COMPLETE.adoc  PHASE2_SUMMARY.adoc  PHASE2_USD_SETUP.adoc  README.adoc  START_HERE.adoc
exts/qixotic.tendroids/qixotic/tendroids/cpp/src/: fast_mesh_updater.cpp  fast_mesh_updater.h  python_bindings.cpp
exts/qixotic.tendroids/tests/: __init__.py  conftest.py  test_approach_params.py  test_approach_tracker.py  test_color_effects.py  test_color_fade.py  test_contact_handler.py  test_contact_offsets.py  test_creature_collider.py  test_creature_input.py  test_creature_regression.py  test_deflection.py  test_envelope_collision.py  test_envelope_constants.py  test_envelope_debug.py  test_hash_grid.py  test_hash_grid_operations.py  test_input_lock.py  test_mocks.py  test_proximity_kernel.py  test_recovery_integration.py  test_recovery_orchestrator.py  test_recovery_state_controller.py  test_repulsion.py  test_state_manager.py  test_velocity_fade.py
exts/qixotic.tendroids/tools/: approach_param_tuner.py
(+273 files in other folders)
